# Atrius

./: Cargo.toml  README.md  agent.ts  firstPrompt.txt  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.tsbuildinfo
docs/: data-model.md
src/: file_monitor.rs  file_transfer.rs  identity.rs  lib.rs  local_store.rs  lock.rs  model.rs  versioning.rs
src/common/: types.ts
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  styles.css  types.ts
ui/src/components/: DevicesCard.tsx  FileDetail.tsx  FileList.tsx  LockCard.tsx  StatusBadge.tsx  VersionsCard.tsx
ui/src/hooks/: useFiles.ts
