[package]
name = "atrius"
version = "0.1.0"
edition = "2021"
description = "Atrius core data model for file-centric, real-time sync"
license = "UNLICENSED"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
